Devoluciones y Comprobaciones 1.0
